terms & condition section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="nav__wrapper_content_1">
                     <ul>
                         <li>
-                            <a href="#">home</a>
+                            <a href="./index.html">home</a>
                         </li>
                         <li>
                             <a href="#">color change <span><i class="fa-solid fa-chevron-down"></i></span> </a>
@@ -37,7 +37,7 @@
                             <a href="#">blog</a>
                         </li>
                         <li>
-                            <a href="#">FAQ</a>
+                            <a href="./faq.html">FAQ</a>
                         </li>
                         <li> 
                             <a href="#">contact</a>
@@ -51,7 +51,7 @@
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">blog</a></li>
-                                <li><a href="#">multi product</a></li>
+                                <li><a href="./terms.html">terms & conditions</a></li>
                                 <li><a href="./about.html">about us</a></li>
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">single_product_with_sidebar</a></li>
