--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">single_product_with_sidebar</a></li>
                                 <li><a href="./faq.html">FAQ</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./404.html">404</a></li>
                                 <li><a href="#">blog</a></li>
                             </ul>
                         </li>
