--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <li><a href="#">blog</a></li>
                                 <li><a href="./terms.html">terms & conditions</a></li>
                                 <li><a href="./about.html">about us</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./wishlist.html">wishlist</a></li>
                                 <li><a href="#">single_product_with_sidebar</a></li>
                                 <li><a href="./faq.html">FAQ</a></li>
                                 <li><a href="./404.html">404</a></li>
