--- a/contact.html
+++ b/contact.html
@@ -155,77 +155,69 @@
 
     <!-- --------------------header end here----------------- -->
 
-    <!-- ---------------------shop-by start here---------------------- -->
+    <!-- ------------------maps start here--------------------- -->
 
-    <section id="shop-by">
+    <section id="maps">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7263.34224689252!2d89.87709266995978!3d24.462193057954693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1693160160347!5m2!1sen!2sbd" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+
+    <!-- ------------------maps start here--------------------- -->
+
+    <!-- ---------------------search direction start here-------------- -->
+
+
+    <section id="direction">
         <div class="container">
-            <div class="shop-by__wrapper">
-                <div class="shop-by__department">
-                    <a href="#">
-                        <i class="fa-solid fa-bars-staggered"></i>
-                        shop by department
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </a>
-                    <ul class="dropdown">
-                        <li><a href="#">eeeeee</a></li>
-                        <li><a href="#">eeeeee</a></li>
-                        <li><a href="#">eeeeee</a></li>
-                        <li><a href="#">eeeeee</a></li>
-                        <li><a href="#">eeeeee</a></li>
-                        <li><a href="#">eeeeee</a></li>
-                        <li><a href="#">eeeeee</a></li>
-                        <li><a href="#">eeeeee</a></li>
-                        <li><a href="#">eeeeee</a></li>
-                    </ul>
-                </div>
-                <div class="shop-by__home">
-                    <a href="#">home</a>
-                </div>
-                <div class="shop-by__about">
-                    <a href="#">wishlist</a>
-                </div>
+            <div class="direction__wrapper">
+                <input type="text" placeholder="Enter Your Starting Point">
+                <a href="#" class="common__btn">get direction</a>
             </div>
         </div>
     </section>
 
-    <!-- ---------------------shop-by start here---------------------- -->
 
-    <!-- ----------------------wishlist start here---------------------- -->
+    <!-- ---------------------search direction end here-------------- -->
 
-    <section id="wishlist">
+    <!-- -------------------------messege start here------------------------- -->
+
+    <section id="messege">
         <div class="container">
-            <div class="wishlist__heading">
-                <h2>My Wishlist</h2>
-            </div>
-            <div class="wishlist__content">
-                <i class="fa-solid fa-xmark"></i>
-                <div class="wishlist__img">
-                    <img src="images/product-small-03.jpg" alt="img" class="img-fluid">
-                    <div class="wishlist__img_detail">
-                        <a href="#">Canon PowerShot Elph 115 IS</a>
-                        <p>In Stock</p>
+            <div class="row">
+                <div class="col-lg-7 messege__form">
+                    <div class="form__heading">
+                        <h2>Leave a Message</h2>
+                        <p>
+                            Maecenas dolor elit, semper a sem sed, pulvinar molestie lacus. Aliquam dignissim, elit non mattis ultrices, neque odio ultricies tellus, eu porttitor nisl ipsum eu massa.
+                        </p>
+                    </div>
+                    <div class="form__contact">
+                        <form method="post" action="">
+                            <div class="row mb-4">
+                                <div class="col-lg-6 contact__name">
+                                    <h2>Your Name*</h2>
+                                    <input type="text" placeholder="your name">
+                                </div>
+                                <div class="col-lg-6 contact__name">
+                                    <h2>Your Email*</h2>
+                                    <input type="email" placeholder="your email">
+                                </div>
+                            </div>
+                            <div class="row mb-4">
+                                <div class="col-lg-12 contact__name">
+                                    <h2>Your messege*</h2>
+                                    <input type="text" placeholder="your messege">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-lg-12 contact__name">
+                                    <h2>Your messege*</h2>
+                                    <textarea name="" id="" cols="" rows="7" class="contact__name"></textarea>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
-                <h6>$169.00</h6>
-                <div class="wishlist__btn">
-                    <a href="#" class="common__btn">add to cart</a>
-                </div>
-                
-            </div>
-            <div class="wishlist__content">
-                <i class="fa-solid fa-xmark"></i>
-                <div class="wishlist__img">
-                    <img src="images/product-small-02.jpg" alt="img" class="img-fluid">
-                    <div class="wishlist__img_detail">
-                        <a href="#">I - Book Mini Laptop elph 115 IS</a>
-                        <p class="out">Out of Stock</p>
-                    </div>
-                </div>
-                <h6>$169.00</h6>
-                <div class="wishlist__btn ">
-                    <a href="#" class="common__btn out__btn">add to cart</a>
-                </div>
-                
+                <div class="col-lg-5"></div>
             </div>
         </div>
     </section>
@@ -235,13 +227,13 @@
 
 
 
-    <!-- ----------------------wishlist start here---------------------- -->
 
 
 
 
 
 
+    <!-- -------------------------messege end here------------------------- -->
 
 
 
@@ -498,22 +490,6 @@
 
 
     <!-- ------------------------coppy start here----------------- -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
