--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">blog</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./contact.html">contact</a></li>
                                 <li><a href="./terms.html">terms & conditions</a></li>
                                 <li><a href="./about.html">about us</a></li>
                                 <li><a href="./wishlist.html">wishlist</a></li>
