contact page complete

--- a/contact.html
+++ b/contact.html
@@ -216,8 +216,54 @@
                             </div>
                         </form>
                     </div>
+                    <button class="common__btn" type="submit">send messege</button>
                 </div>
-                <div class="col-lg-5"></div>
+                <div class="col-lg-5 messege__info">
+                    <div class="info__heading">
+                        <h2>Our Store</h2>
+                        <address>
+                            17 Princess Road <br>
+                            London, Greater London <br>
+                            NW1 8JR, UK
+                        </address>
+                         <h3>Hours of Operation</h3>
+                         <ul>
+                            <li>
+                                <span>Monday:</span>
+                                <span> 12-6 PM</span>
+                            </li>
+                            <li>
+                                <span>Tuesday:</span>
+                                <span> 12-6 PM</span>
+                            </li>
+                            <li>
+                                <span>Wednesday:</span>
+                                <span> 12-6 PM</span>
+                            </li>
+                            <li>
+                                <span>Thursday:</span>
+                                <span> 12-6 PM</span>
+                            </li>
+                            <li>
+                                <span>Friday:</span>
+                                <span> 12-6 PM</span>
+                            </li>
+                            <li>
+                                <span>Saturday:</span>
+                                <span> 12-6 PM</span>
+                            </li>
+                            <li>
+                                <span>Sunday:</span>
+                                <span> 12-6 PM</span>
+                            </li>
+                         </ul>
+                         <h3>Career</h3>
+                         <p>
+                            If you're interested in employment opportunities at MediaCenter, please email us: 
+                            <a href="#">contact@yourstore.com</a>
+                         </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
