--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 <li><a href="./index - 2.html">home alt</a></li>
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">blog</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./register.html">register</a></li>
                                 <li><a href="./contact.html">contact</a></li>
                                 <li><a href="./terms.html">terms & conditions</a></li>
                                 <li><a href="./about.html">about us</a></li>
