--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <li><a href="./index.html">home</a></li>
                                 <li><a href="./index - 2.html">home alt</a></li>
                                 <li><a href="#">blog</a></li>
-                                <li><a href="#">blog</a></li>
+                                <li><a href="./track.html">track</a></li>
                                 <li><a href="./register.html">register</a></li>
                                 <li><a href="./contact.html">contact</a></li>
                                 <li><a href="./terms.html">terms & conditions</a></li>
