--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                                 <li><a href="./contact.html">contact</a></li>
                                 <li><a href="./terms.html">terms & conditions</a></li>
                                 <li><a href="./about.html">about us</a></li>
+                                <li><a href="./checkout.html">checkout</a></li>
                                 <li><a href="./wishlist.html">wishlist</a></li>
                                 <li><a href="#">single_product_with_sidebar</a></li>
                                 <li><a href="./faq.html">FAQ</a></li>
