--- a/contact.html
+++ b/contact.html
@@ -204,8 +204,8 @@
                             </div>
                             <div class="row mb-4">
                                 <div class="col-lg-12 contact__name">
-                                    <h2>Your messege*</h2>
-                                    <input type="text" placeholder="your messege">
+                                    <h2>subject</h2>
+                                    <input type="text" placeholder="">
                                 </div>
                             </div>
                             <div class="row mb-3">
