--- a/blog.html
+++ b/blog.html
@@ -215,7 +215,39 @@
                         </ul>
                     </div>
                     <div class="blog__pera">
-                        
+                        <p class="pera__bold">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, erat in malesuada aliquam, est erat faucibus purus, eget viverra nulla sem vitae neque. Quisque id sodales libero. In nec enim nisi, in ultricies quam. Sed lacinia feugiat velit, cursus molestie lectus mollis et.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis diam erat. Duis velit lectus, posuere a blandit sit amet, tempor at lorem. Donec ultricies, lorem sed ultrices interdum, leo metus luctus sem, vel vulputate diam ipsum sed lorem. Donec tempor arcu nisl, et molestie massa scelerisque ut. Nunc at rutrum leo. Mauris metus mauris, tristique quis sapien eu, rutrum vulputate enim.
+                        </p>
+                        <p>
+                            Mauris tempus erat laoreet turpis lobortis, eu tincidunt erat fermentum. Aliquam non tincidunt urna. Integer tincidunt nec nisl vitae ullamcorper. Proin sed ultrices erat. Praesent varius ultrices massa at faucibus. Aenean dignissim, orci sed faucibus pharetra, dui mi dignissim tortor, sit amet condimentum mi ligula sit amet augue. Pellentesque vitae eros eget enim mollis placerat. 
+                        </p>
+                        <div class="row">
+                            <div class="col-lg-6 pera__big">
+                                <h6>
+                                    Mauris tempus erat laoreet turpis lobortis, eu tincidunt erat fermentum. 
+                                </h6>
+                                <p>
+                                    Aliquam non tincidunt urna. Integer tincidunt nec nisl vitae ullamcorper. Proin sed ultrices erat. Praesent varius ultrices massa at faucibus. Aenean dignissim, orci sed faucibus pharetra, dui mi dignissim tortor, sit amet condimentum mi ligula sit amet augue. Pellentesque vitae eros eget enim mollis placerat. 
+                                </p>
+                            </div>
+                            <div class="col-lg-6 pera__small">
+                                <p>
+                                    Pellentesque sodales augue eget ultricies ultricies. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur sagittis ultrices condimentum. 
+                                </p>
+                                <p>
+                                    Pellentesque ullamcorper libero in enim pellentesque lobortis. Praesent ut dui ac metus iaculis scelerisque at eget metus. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="blog__tag">
+                            <label >Tag:</label>
+                            <span><a href="#">fast  ,</a></span>
+                            <span><a href="#">gaming  ,</a></span>
+                            <span><a href="#">strong</a></span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 blog__side"></div>
