single product page

--- a/blog.html
+++ b/blog.html
@@ -248,6 +248,90 @@
                             <span><a href="#">gaming  ,</a></span>
                             <span><a href="#">strong</a></span>
                         </div>
+                        <div class="blog__id">
+                            <div class="blog__id_img">
+                                <a href="#">
+                                    <img src="images/blog-author.jpg" alt="img" class="img-fluid">
+                                </a>
+                            </div>                            
+                            <div class="blog__id_detail">
+                                <h6>Jane Smith</h6>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="blog__comment">
+                            <h4>2 Comments</h4>
+                            <div class="row">
+                                <div class="col-lg-12 post_post">
+                                    <div class="row">
+                                        <div class="col-lg-1 blog__post_img">
+                                            <img src="images/blog-author.jpg" alt="img" class="img-fluid">
+                                        </div>
+                                        <div class="col-lg-11 blog__post_main">
+                                            <div class="post__main">
+                                                <div class="post__heading">
+                                                    <div class="post__heading_main">
+                                                        <span>
+                                                            <a href="$">Angela</a>
+                                                        </span>
+                                                        <span>
+                                                            - 21 hours ago
+                                                        </span>
+                                                        <span>
+                                                            22
+                                                        </span>
+                                                        <span></span>
+                                                    </div>
+                                                    <div class="post__heading_reply">
+                                                        <span>
+                                                            <a href="#">reply</a>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                                <p>
+                                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-12 post_post">
+                                    <div class="row">
+                                        <div class="col-lg-1 blog__post_img">
+                                            <img src="images/blog-author.jpg" alt="img" class="img-fluid">
+                                        </div>
+                                        <div class="col-lg-11 blog__post_main">
+                                            <div class="post__main">
+                                                <div class="post__heading">
+                                                    <div class="post__heading_main">
+                                                        <span>
+                                                            <a href="$">Angela</a>
+                                                        </span>
+                                                        <span>
+                                                            - 21 hours ago
+                                                        </span>
+                                                        <span>
+                                                            22
+                                                        </span>
+                                                        <span></span>
+                                                    </div>
+                                                    <div class="post__heading_reply">
+                                                        <span>
+                                                            <a href="#">reply</a>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                                <p>
+                                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 blog__side"></div>
