--- a/single-product.html
+++ b/single-product.html
@@ -684,7 +684,34 @@
             <div class="tab-content" id="nav-tabContent" data-aos="fade-up" data-aos-delay="200">
                 <!-- ---------1st content-------------- -->
                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                    -----------
+                    <div class="main__description">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet porttitor eros. Praesent quis diam placerat, accumsan velit interdum, accumsan orci. Nunc libero sem, elementum in semper in, sollicitudin vitae dolor. Etiam sed tempus nisl. Integer vel diam nulla. Suspendisse et aliquam est. Nulla molestie ante et tortor sollicitudin, at elementum odio lobortis. Pellentesque neque enim, feugiat in elit sed, pharetra tempus metus. Pellentesque non lorem nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                        </p>
+                        <p>
+                            Sed consequat orci vel rutrum blandit. Nam non leo vel risus cursus porta quis non nulla. Vestibulum vitae pellentesque nunc. In hac habitasse platea dictumst. Cras egestas, turpis a malesuada mollis, magna tortor scelerisque urna, in pellentesque diam tellus sit amet velit. Donec vel rhoncus nisi, eget placerat elit. Phasellus dignissim nisl vel lectus vehicula, eget vehicula nisl egestas. Duis pretium sed risus dapibus egestas. Nam lectus felis, sodales sit amet turpis se.
+                        </p>
+                        <div class="description__tag">
+                            <span>
+                                <h4>SKU: </h4>
+                                54687621
+                                <span class="separetor">/</span>
+                            </span>
+                            <span>
+                                <h4>categories: </h4>
+                                <a href="#">-50% sale,</a>
+                                <a href="#">gaming,</a>
+                                <a href="#"> desktop PC</a>
+                                <span class="separetor">/</span>
+                            </span>
+                            <span>
+                                <h4> tag: </h4>
+                                <a href="#">fast,</a>
+                                <a href="#">gaming,</a>
+                                <a href="#"> strong</a>
+                            </span>
+                        </div>
+                    </div>
                 </div>
                 <!-- ---------1st content-------------- -->
                 <!-- ---------2nd content-------------- -->
