single product page complete

--- a/blog.html
+++ b/blog.html
@@ -196,6 +196,7 @@
     <section id="blog">
         <div class="container">
             <div class="row">
+                <!-- ------------blog big banner-------- -->
                 <div class="col-lg-9 blog__main">
                     <div class="blog__img">
                         <div class="slick__slider">
@@ -331,10 +332,100 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="reply__main">
+                                <h4>
+                                    Leave a Reply
+                                </h4>
+                                <p>
+                                    Your email address cannot be published. Required fields are marked *
+                                </p>
+                            </div>
+                            <form action="" class="reply__form">
+                                <div class="row">
+                                    <div class="col-lg-6 checkout__name">
+                                        <h2 class="main__name">full name*</h2>
+                                        <input type="text" class="common__input">
+                                    </div>
+                                    <div class="col-lg-6 checkout__name">
+                                        <h2 class="main__name">last name*</h2>
+                                        <input type="text" class="common__input">
+                                    </div>
+                                    <div class="col-lg-12 reply__messege">
+                                        <h3 class="main__name">company name</h3>
+                                        <textarea  cols="30" rows="7" class="common__input"></textarea>
+                                    </div>
+                                    <div>
+                                        <button type="submit" class="common__btn">post comment</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 blog__side"></div>
+                <!-- ------------blog big banner-------- -->
+                <!-- ------------blog small content-------- -->
+                <div class="col-lg-3 blog__side">
+                    <div class="small__search">
+                        <input type="text" placeholder="enter keyword" class="common__input">
+                        <button class="search__btn">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
+                    </div>
+                    <div class="blog__side_detail">
+                        <h2 class="common__heading">About Blog</h2>
+                        <p class="common__pera">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, erat in malesuada aliquam, est erat faucibus purus, eget viverra nulla sem vitae neque. Quisque id sodales libero. 
+                        </p>
+                    </div>
+                    <div class="blog__side_categories">
+                        <h2 class="common__heading">Categories</h2>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <span>business</span>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>company</span>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>entertainment</span>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>health</span>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>news</span>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>stories</span>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>travel</span>
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- ------------blog small content-------- -->
             </div>
         </div>
     </section>
